为网关模块配置路由转发，网关模块日志需要添加vm参数 -Dreactor.netty.http.server.accessLogEnabled=true

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8000
-#server.servlet.context-path=/gateway
+
+#路由转发配置，将/member/...的请求转发member模块
+spring.cloud.gateway.routes[0].id=member
+spring.cloud.gateway.routes[0].uri=http://127.0.0.1:8001
+#spring.cloud.gateway.routes[0].uri=lb://member       nacos写法
+spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
