--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 server.port=8001
 server.servlet.context-path=/member
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+logging.level.com.pds.member.mapper=trace
+
+test.nacos=Member
+
