--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+<!--    这些都用的依赖复制到这里-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
