--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8000
+#生产发布的时候 只有gateway需要配置外网ip 其他模块都只要开放内网访问即可
 
 #路由转发配置，将/member/...的请求转发member模块
 spring.cloud.gateway.routes[0].id=member
 spring.cloud.gateway.routes[0].uri=http://127.0.0.1:8001
-#spring.cloud.gateway.routes[0].uri=lb://member       nacos写法
+#spring.cloud.gateway.routes[0].uri=lb://member     lb负载均衡    nacos写法
 spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
