--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8001
+#项目所有接口的前缀（为了后续做路由转发，在网关模块里，讲接口带/member的请求都转发到member模块
 server.servlet.context-path=/member
-
 
 spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
