修改gateway的application.properties解决跨域;获取验证码接口改为body json格式;

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.cloud.gateway.routes[0].id=member
 spring.cloud.gateway.routes[0].uri=http://127.0.0.1:8001
 #spring.cloud.gateway.routes[0].uri=lb://member     lb负载均衡    nacos写法
 spring.cloud.gateway.routes[0].predicates[0]=Path=/member/**
+
+
+# 允许请求来源
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
+# 允许携带的头信息
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+# 允许的请求方式
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=*
+# 是否允许携带cookie
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+# 跨域检测的有效期 每一个小时发起一个请求检测一下
+spring.cloud.gateway.globalcors.cors-configurations.[/**].maxAge=3600
