--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
-        <!-- 模板引擎freemarker -->
+        <!-- 引入 模板引擎freemarker -->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
