添加 datasource.url参数 否则入库中文为？

--- a/business/src/main/resources/application.properties
+++ b/business/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8002
 #项目所有接口的前缀（为了后续做路由转发，在网关模块里，讲接口带/member的请求都转发到member模块
 server.servlet.context-path=/business
 
-spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/train?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
