--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -13,6 +13,13 @@ spring.cloud.gateway.routes[1].uri=http://127.0.0.1:8002
 #spring.cloud.gateway.routes[0].uri=lb://member     lb负载均衡    nacos写法
 spring.cloud.gateway.routes[1].predicates[0]=Path=/business/**
 
+spring.cloud.gateway.routes[2].id=batch
+spring.cloud.gateway.routes[2].uri=http://127.0.0.1:8003
+#spring.cloud.gateway.routes[0].uri=lb://member     lb负载均衡    nacos写法
+spring.cloud.gateway.routes[2].predicates[0]=Path=/batch/**
+
+
+
 # 允许请求来源
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
 # 允许携带的头信息
