--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -31,6 +31,7 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
+<!--        新增依赖 -->
         <!--远程调用openfeign-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
